--- a/project-2/index.html
+++ b/project-2/index.html
@@ -19,7 +19,7 @@
         <li>gold bead (size to match hook size)</li>
         <li>thread bobbin</li>
 
-
+        <a href="./pages/instructions.html">Proceed to Instructions</a>
 
 
     </body>
