added text boxes and links

--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -39,7 +39,9 @@
       <dfn><li>Hackle: feathers from a rooster. <em>Grizzly</em> hackle is a type of hackle used in tying flies.</dfn></li>
 
 
-
-
+      <ul> <ins>Links</ins>
+        <li><a href="../index.html">Home page</a></li>
+        <li><a href="./form.html">Order Form</a></li>
+      </ul>
 
 </html>
