--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -20,18 +20,18 @@
         </tr>
         <tr>
           <th scope="row">Action</th>
-          <td>Wrap hook 16 times with lead wire.</td>
-          <td>Tie marabou to hook.</td>
-          <td>Wrap the hook with the olive chenille</td>
-          <td>Wrap the entire body of the fly with the grizzly hackle.</td>
-          <td>Whip finish the fly and add head cement.</td>
+          <td rowspan="3">Wrap hook 16 times with lead wire.</td>
+          <td rowspan="3">Tie marabou to hook.</td>
+          <td rowspan="3">Wrap the hook with the olive chenille</td>
+          <td rowspan="3">Wrap the entire body of the fly with the grizzly hackle.</td>
+          <td rowspan="3">Whip finish the fly and add head cement.</td>
     </body>
     <body>
-      Step 1:<img src="./images/1.JPG" alt="An image of Step 1 completed" title="Step 1 when completed" width="500" height="500" />
-      Step 2:<img src="./images/2.JPG" alt="An image of Step 2 completed" title="Step 2 when completed" width="500" height="500" />
-      Step 3:<img src="./images/3.JPG" alt="An image of Step 3 completed" title="Step 3 when completed" width="500" height="500" />
-      Step 4:<img src="./images/4.JPG" alt="An image of Step 4 completed" title="Step 4 when completed" width="500" height="500" />
-      Step 5:<img src="./images/5.JPG" alt="An image of Step 5 completed" title="Step 5 when completed" width="500" height="500" />
+      Step 1:<img src="./images/1.JPG" alt="An image of Step 1 completed" title="Step 1 when completed" width="100" height="100" />
+      Step 2:<img src="./images/2.JPG" alt="An image of Step 2 completed" title="Step 2 when completed" width="100" height="100" />
+      Step 3:<img src="./images/3.JPG" alt="An image of Step 3 completed" title="Step 3 when completed" width="100" height="100" />
+      Step 4:<img src="./images/4.JPG" alt="An image of Step 4 completed" title="Step 4 when completed" width="100" height="100" />
+      Step 5:<img src="./images/5.JPG" alt="An image of Step 5 completed" title="Step 5 when completed" width="100" height="100" />
     </body>
     <body>
       <dfn><li>Marabou: feathers used from the Marabou stork are referred to as <strong>Marabou</strong>.</dfn></li>
@@ -40,8 +40,8 @@
 
 
       <ul> <ins>Links</ins>
-        <li><a href="../index.html">Home page</a></li>
-        <li><a href="./form.html">Order Form</a></li>
+        <li><a href="./form.html">Order Flies</a></li>
+        <li><a href="../index.html">Home</a></li>
       </ul>
 
 </html>
