--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -27,11 +27,11 @@
           <td rowspan="3">Whip finish the fly and add head cement.</td>
     </body>
     <body>
-      Step 1:<img src="/images/1.jpg" alt="An image of Step 1 completed" title="Step 1 when completed" width="200" height="200" />
-      Step 2:<img src="/images/2.jpg" alt="An image of Step 2 completed" title="Step 2 when completed" width="200" height="200" />
-      Step 3:<img src="/images/3.jpg" alt="An image of Step 3 completed" title="Step 3 when completed" width="200" height="200" />
-      Step 4:<img src="/images/4.jpg" alt="An image of Step 4 completed" title="Step 4 when completed" width="200" height="200" />
-      Step 5:<img src="/images/5.jpg" alt="An image of Step 5 completed" title="Step 5 when completed" width="200" height="200" />
+      Step 1:<img src="/images/a.jpg" alt="An image of Step 1 completed" title="Step 1 when completed" width="200" height="200" />
+      Step 2:<img src="/images/b.jpg" alt="An image of Step 2 completed" title="Step 2 when completed" width="200" height="200" />
+      Step 3:<img src="/images/c.jpg" alt="An image of Step 3 completed" title="Step 3 when completed" width="200" height="200" />
+      Step 4:<img src="/images/d.jpg" alt="An image of Step 4 completed" title="Step 4 when completed" width="200" height="200" />
+      Step 5:<img src="/images/e.jpg" alt="An image of Step 5 completed" title="Step 5 when completed" width="200" height="200" />
     </body>
     <body>
       <dfn><li>Marabou: feathers used from the Marabou stork are referred to as <strong>Marabou</strong>.</dfn></li>
