--- a/project-2/pages/form.html
+++ b/project-2/pages/form.html
@@ -25,7 +25,7 @@
     <option value="AZ">Arizona</option>
     <option value="AR">Arkansas</option>
     <option value="CA">California</option>
-    <option value="CO" selected>Colorado</option>
+    <option value="CO">Colorado</option>
     <option value="CT">Connecticut</option>
     <option value="DE">Delaware</option>
     <option value="DC">District Of Columbia</option>
@@ -46,7 +46,7 @@
     <option value="MN">Minnesota</option>
     <option value="MS">Mississippi</option>
     <option value="MO">Missouri</option>
-    <option value="MT">Montana</option>
+    <option value="MT" selected>Montana</option>
     <option value="NE">Nebraska</option>
     <option value="NV">Nevada</option>
     <option value="NH">New Hampshire</option>
@@ -97,3 +97,5 @@
 <ul>
       <li><a href="./instructions.html">Instructions</a></li>
       <li><a href="../index.html">Home</a></li>
+
+      </html>
