--- a/project-2/pages/form.html
+++ b/project-2/pages/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Order Form</title>
   </head>
@@ -94,8 +94,10 @@
     </form>
 
 
-<ul>
+<ul> <ins>Links</ins>
       <li><a href="./instructions.html">Instructions</a></li>
       <li><a href="../index.html">Home</a></li>
-
+      <li><a href=".../about.html">About Me</a></li>
+      <li><a href="..../more-info.html">More Info</a></li>
+    </ul>
       </html>
