--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <style>
             table, th, td {border: 1px solid black; border-collapse: collapse}
@@ -42,6 +42,8 @@
       <ul> <ins>Links</ins>
         <li><a href="./form.html">Order Flies</a></li>
         <li><a href="../index.html">Home</a></li>
+        <li><a href=".../about.html">About Me</a></li>
+        <li><a href="..../more-info.html">More Info</a></li>
       </ul>
 
 </html>
