--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -7,6 +7,9 @@
   <meta name="description" content="Instructable to tie flies">
   <title>About Me</title>
 </head>
+<style>
+  body{background-color: red;}
+  </style>
 <body>
   <h1 class="page-header" align="center">About Me</h1>
   <div class="center">
@@ -23,4 +26,4 @@
   outside, usually hunting or fishing. I graduate this semester and haven't
   been more exicted to finish school and continue working my dream job:
   a firefighter for the Forest Service.</p>
-   
+</div>
