--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -27,3 +27,10 @@
   been more exicted to finish school and continue working my dream job:
   a firefighter for the Forest Service.</p>
 </div>
+
+<h4 class="page-header" align="center">A great song to fish to.</h4>
+<audio controls>
+  <source src="../media/01_Where_The_Green_Grass_Grows.mp3" />
+  <source src="../media/01_Where_The_Green_Grass_Grows.ogg" />
+  <p>This browser does not support our audio format</p>
+</audio>
