--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -34,3 +34,4 @@
   <source src="../media/01_Where_The_Green_Grass_Grows.ogg" />
   <p>This browser does not support our audio format</p>
 </audio>
+</html>
