--- a/project-2/pages/form.html
+++ b/project-2/pages/form.html
@@ -96,8 +96,8 @@
 
 <ul> <ins>Links</ins>
       <li><a href="./instructions.html">Instructions</a></li>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href=".../about.html">About Me</a></li>
-      <li><a href="..../more-info.html">More Info</a></li>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./about.html">About Me</a></li>
+      <li><a href="./more-info.html">More Info</a></li>
     </ul>
       </html>
