--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -46,7 +46,7 @@ Missoula, MT 59801
 <ul> <ins>Links</ins>
   <li><a href="./index.html">Home</li></a>
   <li><a href="./form.html">Order Flies</a></li>
-  <li><a href="..../more-info.html">More Info</a></li>
+  <li><a href="./more-info.html">More Info</a></li>
   <li><a href="./instructions.html">Instructions</a></li>
 </ul>
 
