--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -27,6 +27,7 @@
 </div>
 
 <h4 class="page-header" align="center">A great song to fish to.</h4>
+Where The Green Grass Grows by Tim McGraw
 <audio controls>
   <source src="../media/01_Where_The_Green_Grass_Grows.mp3" />
   <source src="../media/01_Where_The_Green_Grass_Grows.ogg" />
