--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -26,17 +26,17 @@
   a firefighter for the Forest Service.</p>
 </div>
 
-<h4 class="page-header" align="center">A great song to fish to.</h4>
-Where The Green Grass Grows by Tim McGraw
+<h4 class="page-header" align="center">A great song to fish to.
+Where The Green Grass Grows by Tim McGraw</h4>
 <audio controls>
   <source src="../media/01_Where_The_Green_Grass_Grows.mp3" />
   <source src="../media/01_Where_The_Green_Grass_Grows.ogg" />
   <p>This browser does not support our audio format</p>
 </audio>
-<h5 align="center" id="contactMe">Contact Me</h5>
+<h5 align="center" id="contactMe">Contact Me
 <a href="mailto:andrew.martinez@umconnect.umt.edu">andrew.martinez@umconnect.umt.edu</a>
 1234 South Street
-Missoula, MT 59801
+Missoula, MT 59801</h5>
 <address>
 <h4 class="page-header" align="center">Map of Missoula</h4>
 
