--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -43,7 +43,7 @@ Missoula, MT 59801</h5>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d87274.78548514146!2d-114.0882069358984!3d46.87641748797098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc2a50f367cb%3A0xe9e31277ca94802e!2sMissoula%2C+MT!5e0!3m2!1sen!2sus!4v1508281772516" width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></h4>
 </address>
 <ul> <ins>Links</ins>
-  <li><a href="./index.html">Home</li></a>
+  <li><a href="../index.html">Home</li></a>
   <li><a href="./form.html">Order Flies</a></li>
   <li><a href="./more-info.html">More Info</a></li>
   <li><a href="./instructions.html">Instructions</a></li>
