--- a/project-2/pages/more-info.html
+++ b/project-2/pages/more-info.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-
-Hello
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1>">
+  <meta name="author" content="Andrew Martinez">
+  <meta name="description" content="More Information">
+  <title>More Info</title>
+</head>
+<body>
+  <p><h1 class="page-header" align="center">More Info</h1>
+  <div class="center">
 
 </html>
