--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -41,9 +41,9 @@
 
       <ul> <ins>Links</ins>
         <li><a href="./form.html">Order Flies</a></li>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About Me</a></li>
         <li><a href="./more-info.html">More Info</a></li>
+        <li><a href="./about.html">About Me</a></li>
+        <li><a href="../index.html">Home</a></li>
       </ul>
 
 </html>
