--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -48,5 +48,6 @@ Missoula, MT 59801</h5>
   <li><a href="./more-info.html">More Info</a></li>
   <li><a href="../index.html">Home</a></li>
 </ul>
+</body>
 
 </html>
