--- a/project-2/pages/more-info.html
+++ b/project-2/pages/more-info.html
@@ -10,5 +10,15 @@
 <body>
   <p><h1 class="page-header" align="center">More Info</h1>
   <div class="center">
+    Here is a video of what fly fishing means to me.
+    <!--<cite>Fly Fishing:The Best Day of Your Life by Streem Outdoors</cite>-->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/uyyAjC3iPPE" frameborder="0" allowfullscreen></iframe>
+    <ul> <ins>Links</ins>
+    <li><a href="./instructions.html">Instructions</li></a>
+    <li><a href="./form.html">Order Flies</a></li>
+    <li><a href="./more-info.html">More Info</a></li>
+    <li><a href="../index.html">Home</a></li>
+  </ul>
+</body>
 
 </html>
