--- a/project-2/pages/form.html
+++ b/project-2/pages/form.html
@@ -100,4 +100,5 @@
       <li><a href="./about.html">About Me</a></li>
       <li><a href="../index.html">Home</a></li>
     </ul>
+  </body>
       </html>
