--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -45,5 +45,6 @@
         <li><a href="./about.html">About Me</a></li>
         <li><a href="../index.html">Home</a></li>
       </ul>
+    </body>
 
 </html>
