--- a/project-2/pages/more-info.html
+++ b/project-2/pages/more-info.html
@@ -10,7 +10,7 @@
 <body>
   <p><h1 class="page-header" align="center">More Info</h1>
   <div class="center">
-    Here is a video of what fly fishing means to me.
+  <p align="center">  What fly fishing is about.</p>
     <!--<cite>Fly Fishing:The Best Day of Your Life by Streem Outdoors</cite>-->
     <iframe width="560" height="315" src="https://www.youtube.com/embed/uyyAjC3iPPE" frameborder="0" allowfullscreen></iframe>
     <ul> <ins>Links</ins>
