--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -28,20 +28,25 @@
 
 <h4 class="page-header" align="center">A great song to fish to.
 Where The Green Grass Grows by Tim McGraw</h4>
+<p align="center">
 <audio controls>
   <source src="../media/01_Where_The_Green_Grass_Grows.mp3" />
   <source src="../media/01_Where_The_Green_Grass_Grows.ogg" />
   <p>This browser does not support our audio format</p>
 </audio>
+</p>
 <h5 align="center" id="contactMe">Contact Me
 <a href="mailto:andrew.martinez@umconnect.umt.edu">andrew.martinez@umconnect.umt.edu</a>
 1234 South Street
 Missoula, MT 59801</h5>
 <address>
+  <p align="center">
 <h4 class="page-header" align="center">Map of Missoula
 
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d87274.78548514146!2d-114.0882069358984!3d46.87641748797098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc2a50f367cb%3A0xe9e31277ca94802e!2sMissoula%2C+MT!5e0!3m2!1sen!2sus!4v1508281772516" width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></h4>
+</p>
 </address>
+
 <ul> <ins>Links</ins>
   <li><a href="./instructions.html">Instructions</li></a>
   <li><a href="./form.html">Order Flies</a></li>
