--- a/project-2/pages/more-info.html
+++ b/project-2/pages/more-info.html
@@ -16,7 +16,7 @@
     <ul> <ins>Links</ins>
     <li><a href="./instructions.html">Instructions</li></a>
     <li><a href="./form.html">Order Flies</a></li>
-    <li><a href="./more-info.html">More Info</a></li>
+    <li><a href="./about.html">About Me</a></li>
     <li><a href="../index.html">Home</a></li>
   </ul>
 </body>
