--- a/project-2/pages/more-info.html
+++ b/project-2/pages/more-info.html
@@ -12,7 +12,8 @@
   <div class="center">
   <p align="center">  What fly fishing is about.</p>
     <!--<cite>Fly Fishing:The Best Day of Your Life by Streem Outdoors</cite>-->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/uyyAjC3iPPE" frameborder="0" allowfullscreen></iframe>
+  <p align="center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/uyyAjC3iPPE" frameborder="0" allowfullscreen></iframe></p>
     <ul> <ins>Links</ins>
     <li><a href="./instructions.html">Instructions</li></a>
     <li><a href="./form.html">Order Flies</a></li>
