--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -11,42 +11,59 @@
 <body>
   <h1 class="page-header" align="center">About Me</h1>
   <div class="center">
+<p align="center"
 <p>Hey everyone. My name is Andrew Martinez and I am a Resource
     Conservation major with a minor in Fire Sciences/Management.
     This is my first time taking a web design class and so far it
-    has been an awesome learning experience.</p>
+    has been an awesome learning experience.
+
+  </p></p>
+
+<p align="center"
 <p>I chose the topic of tying flies for this project because I love to
   fly fish. I started tying my own flies a year ago, taught myself the
   basics, and now I tie most of my own. It is satisfying to catch a fish
-  on something I made myself. It is also very relaxing to tie flies.</p>
+  on something I made myself. It is also very relaxing to tie flies.
+
+</p></p>
+
+<p align="center"
 <p>I moved to Missoula for school three years ago and have never thought
   about going back home. I love living here and I am able to enjoy being
   outside, usually hunting or fishing. I graduate this semester and haven't
   been more exicted to finish school and continue working my dream job:
-  a firefighter for the Forest Service.</p>
+  a firefighter for the Forest Service.
+
+</p></p>
+
+
 </div>
 
-<h4 class="page-header" align="center">A great song to fish to.
+<h4 align="center" align="header">A great song to fish to.
 Where The Green Grass Grows by Tim McGraw</h4>
+<div align="center" class="audio">
+
 <audio controls>
-<p align="center">
   <source src="../media/01_Where_The_Green_Grass_Grows.mp3" />
   <source src="../media/01_Where_The_Green_Grass_Grows.ogg" />
   <p>This browser does not support our audio format</p>
 </p>
 </audio>
+</div>
 
 <h5 align="center" id="contactMe">Contact Me
 <a href="mailto:andrew.martinez@umconnect.umt.edu">andrew.martinez@umconnect.umt.edu</a>
 1234 South Street
 Missoula, MT 59801</h5>
 <address>
-  <p align="center">
+
 <h4 class="page-header" align="center">Map of Missoula</h4>
-</p>
-<p align="center">
+<div align="center" class="map">
+
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d87274.78548514146!2d-114.0882069358984!3d46.87641748797098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc2a50f367cb%3A0xe9e31277ca94802e!2sMissoula%2C+MT!5e0!3m2!1sen!2sus!4v1508281772516" width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-</p>
+
+</div>
+
 </address>
 
 <ul> <ins>Links</ins>
