--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -32,6 +32,7 @@
       Step 3:<img src="https://1source.basspro.com/images/article_images/wooly7.jpg" alt="An image of Step 3 completed" title="Step 3 when completed" width="200" height="200" />
       Step 4:<img src="https://1source.basspro.com/images/article_images/wooly8.jpg" alt="" title="Step 4 when completed" width="200" height="200" />
       Step 5:<img src="https://1source.basspro.com/images/article_images/wooly10.jpg" alt="An image of Step 5 completed" title="Step 5 when completed" width="200" height="200" />
+<!--<cite>images taken from: https://1source.basspro.com/index.php/component/k2/68-fly-tying/232-tying-the-wooly-bugger Jason Akl:Tying the Wooly Bugger-->
     </body>
     <body>
       <dfn><li>Marabou: feathers used from the Marabou stork are referred to as <strong>Marabou</strong>.</dfn></li>
