--- a/project-3/index.html
+++ b/project-3/index.html
@@ -31,3 +31,14 @@
       <aside>
         <p><img src="images/smokejumpercover.jpg" alt="cover"></p>
       </aside>
+
+      <footer>
+
+        <div class="linkage">
+          <p><a href="pages/about.html">About</a></p>
+          <p><a href="pages/contact.html">Contact</a></p>
+          <p><a href="pages/sample.html">Sample</a></p>
+        </footer>
+      </body>
+      </html>
+      
