--- a/project-3/index.html
+++ b/project-3/index.html
@@ -30,6 +30,7 @@
 
       <aside>
         <p><img src="images/smokejumpercover.jpg" alt="cover"></p>
+        <!--Source of picture: https://www.booktopia.com.au/http_coversbooktopiacomau/600/9780062319623/smokejumper.jpg-->
       </aside>
 
       <footer>
@@ -41,4 +42,3 @@
         </footer>
       </body>
       </html>
-      
