--- a/project-3/index.html
+++ b/project-3/index.html
@@ -28,10 +28,10 @@
         </div>
       </main>
 
-      <aside>
+      <center>
         <p><img src="images/smokejumpercover.jpg" alt="cover"></p>
         <!--Source of picture: https://www.booktopia.com.au/http_coversbooktopiacomau/600/9780062319623/smokejumper.jpg-->
-      </aside>
+      </center>
 
       <footer>
 
