--- a/project-3/index.html
+++ b/project-3/index.html
@@ -29,8 +29,8 @@
       </main>
 
       <center>
-        <p><img src="images/smokejumpercover.jpg" alt="cover"></p>
-        <!--Source of picture: https://www.booktopia.com.au/http_coversbooktopiacomau/600/9780062319623/smokejumper.jpg-->
+        <p><img src="images/smokejumperimage.jpg" alt="cover"></p>
+        <!--Source of picture: https://www.amazon.com/Smokejumper-Memoir-Americas-Airborne-Firefighters/dp/0062319639-->
       </center>
 
       <footer>
