--- a/project-3/index.html
+++ b/project-3/index.html
@@ -35,10 +35,11 @@
 
       <footer>
 
-        <div class="linkage">
-          <p><a href="pages/about.html">About</a></p>
-          <p><a href="pages/contact.html">Contact</a></p>
-          <p><a href="pages/sample.html">Sample</a></p>
+        <ul id="nav-list">
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/contact.html">Contact</a></li>
+          <li><a href="pages/sample.html">Sample</a></li>
+        </ul>
         </footer>
       </body>
       </html>
