--- a/project-3/index.html
+++ b/project-3/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, intial-scale=1">
   <meta name="author" content="Andrew Martinez">
-  <meta name="desription" content="Project 3">
+  <meta name="desription" content="Introduction">
   <!--Link of styles and fonts -->
   <link rel="stylesheet" href="css/style.css">
 
-  <!--Title-->
+  <!--Title of page-->
   <title>Smokejumper</title>
 </head>
 
