--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -17,3 +17,25 @@
   <header> <h1><strong>About Jason</h1></strong>
     <div class="content">
       <main>
+        <p>Jason is part of an elite group of firefighters: <em id="w1" id="heading-3">Smokejumpers</em>.
+          Smokejumpers are highly trained firefighters that parachute into remote areas to extinguish wildfires.
+          He has over twenty-seven years of firefighting experience. He started his
+          career with the Riverside County Fire Department in California. He then worked
+          his way up to become a smokejumper. The book tells his story and how he overcame
+          obstacles and accomplished a great feat.</p>
+        </main>
+        <center>
+          <p><img src="images/jason.jpg" alt="picture"></p>
+          <!--Source of picture:http://smokejumperbook.com/images/IMG_1921_LR.jpg-->
+        </center>
+
+        <footer>
+
+          <ul id="nav-list">
+            <li><a href="pages/about.html">About</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="pages/sample.html">Sample</a></li>
+          </ul>
+          </footer>
+        </body>
+        </html>
