--- a/project-3/index.html
+++ b/project-3/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, intial-scale=1">
   <meta name="author" content="Andrew Martinez">
   <meta name="desription" content="Introduction">
-  <!--Link of styles and fonts -->
+  <!--Link of styles-->
   <link rel="stylesheet" href="css/style.css">
 
   <!--Title of page-->
