--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, intial-scale=1">
   <meta name="author" content="Andrew Martinez">
   <meta name="desription" content="about author">
-  <!--Link of styles and fonts -->
+  <!--Link of styles-->
   <link rel="stylesheet" href="css/style.css">
 
   <!--Title of page-->
@@ -32,7 +32,7 @@
         <footer>
 
           <ul id="nav-list">
-            <li><a href="pages/about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
             <li><a href="pages/sample.html">Sample</a></li>
           </ul>
