--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Andrew Martinez">
   <meta name="desription" content="about author">
   <!--Link of styles-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!--Title of page-->
   <title>Jason A. Ramos</title>
