images and sample

--- a/project-3/index.html
+++ b/project-3/index.html
@@ -29,7 +29,7 @@
       </main>
 
       <center>
-        <p><img src="images/smokejumperimage.jpg" alt="cover"></p>
+        <p><img src="./images/smokejumperimage.jpg" alt="cover"></p>
         <!--Source of picture: https://www.amazon.com/Smokejumper-Memoir-Americas-Airborne-Firefighters/dp/0062319639-->
       </center>
 
