--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -25,7 +25,7 @@
           obstacles and accomplished a great feat.</p>
         </main>
         <center>
-          <p><img src="http://smokejumperbook.com/images/IMG_1921_LR.jpg" alt="picture"></p>
+          <p><img src="./images/jason.jpg" alt="Photo of Jason and his book"></p>
           <!--Source of picture:http://smokejumperbook.com/images/IMG_1921_LR.jpg-->
         </center>
 
