--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -11,3 +11,33 @@
   <!--Title-->
   <title>Smokejumper</title>
 </head>
+
+
+<body>
+  <header> <h1><strong>Exerpt from Jason's book</h1></strong>
+    <div class="content">
+      <main>
+        <p>"There's the satisfaction of facing huge physical and mental challenges.
+          The undeniable excitement of danger. The camaraderie, and the love/hate
+          relationship that comes from depending on others for your life and vice
+          versa."-Jason A. Ramos pg 212
+
+          "This job is notorious for the strain it puts on relationships. Dating a
+          firefighter or smokejumper sounds exciting, and in the short term often is.
+          But the appeal of your partner being called away constantly to do dangerous
+          work at a moments notice, to who knows where and for who knows how long,
+          quickly wears thin."-Jason A. Ramos pg 211</p>
+
+        </main>
+
+
+        <footer>
+
+          <ul id="nav-list">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="pages/about.html">About</a></li>
+          </ul>
+          </footer>
+        </body>
+        </html>
