--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -35,8 +35,8 @@
 
           <ul id="nav-list">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
-            <li><a href="pages/about.html">About</a></li>
+            <li><a href="../pages/contact.html">Contact</a></li>
+            <li><a href="../pages/about.html">About</a></li>
           </ul>
           </footer>
         </body>
