--- a/project-3/index.html
+++ b/project-3/index.html
@@ -36,9 +36,9 @@
       <footer>
 
         <ul id="nav-list">
-          <li><a href="../pages/about.html">About</a></li>
-          <li><a href="../pages/contact.html">Contact</a></li>
-          <li><a href="../pages/sample.html">Sample</a></li>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/contact.html">Contact</a></li>
+          <li><a href="pages/sample.html">Sample</a></li>
         </ul>
         </footer>
       </body>
