links and picture

--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -25,16 +25,16 @@
           obstacles and accomplished a great feat.</p>
         </main>
         <center>
-          <p><img src="./images/jason.jpg" alt="Photo of Jason and his book"></p>
+          <p><img src="../images/jason.jpg" alt="Photo of Jason and his book"></p>
           <!--Source of picture:http://smokejumperbook.com/images/IMG_1921_LR.jpg-->
         </center>
 
         <footer>
 
           <ul id="nav-list">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../pages/contact.html">Contact</a></li>
-            <li><a href="../pages/sample.html">Sample</a></li>
+            <li><a href="../index.html"> Home</a></li>
+            <li><a href="pages/contact.html"> Contact</a></li>
+            <li><a href="pages/sample.html"> Sample</a></li>
           </ul>
           </footer>
         </body>
