--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -34,7 +34,7 @@
           <ul id="nav-list">
             <li><a href="../index.html"> Home</a></li>
             <li><a href="pages/contact.html"> Contact</a></li>
-            <li><a href="pages/sample.html"> Sample</a></li>
+            <li><a href="../pages/sample.html"> Sample</a></li>
           </ul>
           </footer>
         </body>
