--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -10,6 +10,15 @@
 
   <!--Title-->
   <title>Smokejumper</title>
+  <style>
+  <div.main-container {
+    background-image: image(./images/wildfire.jpg);
+  }
+</style>
+
+<div class="main-container">
+
+</div>
 </head>
 
 
