--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Andrew Martinez">
   <meta name="desription" content="Contact">
   <!--Link of styles and fonts -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!--Title-->
   <title>Smokejumper</title>
