image in sample page

--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -39,12 +39,15 @@
 
         </main>
 
+        <img src="./images/wildfire.jpg">
+        <!--Image source:https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Deerfire_high_res_edit.jpg/1200px-Deerfire_high_res_edit.jpg-->
+
 
         <footer>
 
           <ul id="nav-list">
             <li><a href="../index.html"> Home</a></li>
-            <li><a href="pages/contact.html"> Contact</a></li>
+            <li><a href="../pages/contact.html"> Contact</a></li>
             <li><a href="../pages/about.html"> About</a></li>
           </ul>
           </footer>
