--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -42,7 +42,7 @@
 
    <ul id="nav-list">
      <li><a href="../index.html"> Home</a></li>
-     <li><a href="pages/contact.html"> Contact</a></li>
+     <li><a href="../pages/sample.html"> Sample</a></li>
      <li><a href="../pages/about.html"> About</a></li>
    </ul>
    </footer>
